--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ pretrain_models/gpt2/pytorch_model.bin
 eval_script
 reformulation_experiment/data
 reformulation_experiment/output
+crossmodal3600_zh.json
